--- a/netlify/forms/gartner-cool-vendor.yaml
+++ b/netlify/forms/gartner-cool-vendor.yaml
@@ -4,6 +4,8 @@ title: Stoplight is named a Gartner 2019 Cool Vendor
 subtitle:
 leftContent:
   description: >-
+    ![gartner](/images/gartner-cool-vendor.png)
+
     Large enterprises embarking on a Digital API transformation to supercharge their business increasingly need API Design Management in addition to traditional API Management to make this happen.<br>
 
     Poor API designs lead to poor service implementation and documentation which significantly impacts any Digital API transformation.<br>
@@ -66,6 +68,8 @@ their API & Microservices workflow'
       alt: TiVo
     - src: /images/logo_zendesk.png
       alt: Zendesk
+actionBar:
+  enabled: true
 meta:
   favicon: /images/mark_light_bg.png
   title: Get a demo of our API Toolkit | Stoplight
