Automatically generated. Merged on Netlify CMS
Force merge of:
* "netlify/forms/gartner-cool-vendor.yaml"

--- a/netlify/forms/gartner-cool-vendor.yaml
+++ b/netlify/forms/gartner-cool-vendor.yaml
@@ -1,11 +1,11 @@
 path: /gartner-cool-vendor
 title: Stoplight named a Gartner 2019 Cool Vendor
 subtitle: >-
-  Stoplight has been named in Gartner’s prestigious  “Cool Vendor in Application
+  Stoplight named in Gartner’s prestigious  “Cool Vendor in Application
   Development” 2019 report.
 color: blue
 hubspot:
-  formId: 7ae2bb42-67a6-4ee3-9ac5-ff21d87812ea
+  formId: e16f33d0-149f-4fe4-be2c-63ec29d9605e
   portalId: '4892910'
 leftContent:
   description: >-
