--- a/netlify/settings.yaml
+++ b/netlify/settings.yaml
@@ -187,15 +187,15 @@ footer:
         - fab
         - github
 meta:
-  description: The Complete API Toolkit for Teams and Enterprise | Stoplight
+  description: ''
   favicon: /favicons/favicon.ico
   image: /images/home-hero.png
   robots: 'index, follow'
-  title: Stoplight
+  title: The Complete API Toolkit for Teams and Enterprise | Stoplight
   twitter:
-    description: The Complete API Toolkit for Teams and Enterprise | Stoplight
+    description: ''
     image: /images/home-hero.png
-    title: Stoplight
+    title: The Complete API Toolkit for Teams and Enterprise | Stoplight
     username: '@stoplightio'
   url: 'https://stoplight.io'
 integrations:
