fix: add title back to collage

--- a/netlify/pages/home.yaml
+++ b/netlify/pages/home.yaml
@@ -39,6 +39,7 @@ hero:
     development process
   title: 'Best in class API Design, Docs, Mocking, and Testing'
 collage:
+  title: 'Thousands of companies use Stoplight to streamline'
   cta:
     color: green
     href: /case-studies
