Automatically generated. Merged on Netlify CMS
Force merge of:
* "netlify/forms/gartner-cool-vendor.yaml"

--- a/netlify/forms/gartner-cool-vendor.yaml
+++ b/netlify/forms/gartner-cool-vendor.yaml
@@ -1,5 +1,6 @@
 path: /gartner-cool-vendor
 title: Stoplight named a Gartner 2019 Cool Vendor
+Title Image: /images/gartner-cool-vendor.png
 subtitle: >-
   Stoplight named in Gartner’s prestigious  “Cool Vendor in Application
   Development” 2019 report.
